# N-Queen-Game-using-C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
